# franzreisnerai

./: .env  .env.template  .gitignore  AUDIT_REPORT_2026-04-14.md  AUTONOMOUS_AGENT_GUIDE.md  DEVELOPER_TEAM_v8_GUIDE.md  Dockerfile  Modelfile.franz-coder  README.md  docker-compose.yml  franz.cfg  franz.py  franz_autopush.sh  pyproject.toml  start_autonomous_task.py  temp_code_0.py  temp_code_1.py  test_autonomous_agent.py  test_coding_suite.py  test_developer_team.py  test_franz_v2_1.py  test_smart_routing.py
.cache/: 13ed5e3d58f6912c.json  1426dd7c1339dc58.json  192e00df6e770dc8.json  2a10cd8ba16830f6.json  3b78f3096167764e.json  b4acdb7ff0d3a7d6.json  c3156007c271d430.json  f77f6d9a63b87981.json
agents/: __init__.py  debug_agent.py  developer_agent.py
mcp/: coding_server.py  hungarian_server.py  terminal_server.py
src/: __init__.py  classifier.py  cli.py  config.py  diagnostics.py  hooks.py  learn.py  llm.py  llm_legacy.py  mcp_client.py  memory_legacy.py  model_router.py  router.py  security.py  tools.py
src/agents/: __init__.py  base_agent.py  code_agent.py  debug_agent.py  developer_agent.py
src/autonomous/: __init__.py  code_validator.py  context_manager.py  dependency_manager.py  error_recovery.py  execution_engine.py  progress_tracker.py  strategy_selector.py
src/llm/: __init__.py  base.py  cache.py  gateway.py  gemini.py  groq_client.py  ollama_adapter.py  openrouter.py  smart_ollama.py
src/reasoning/: chain_of_thought.py
src/team/: __init__.py  agent_specs.py  coordinator.py
src/ui/: display.py
src/workflows/: __init__.py  auto_learn.py  autonomous.py  autonomous_v2.py  code_improve.py  hungarian_grammar.py
