[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "franz"
version = "5.0.0"
description = "Franz – Offline-first, Agentic Terminal AI by DömösAiTech 2026"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "psutil>=5.9",
    "rich>=13.0",
    "google-generativeai>=0.5",
]

[project.optional-dependencies]
claude = ["anthropic>=0.25"]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
franz = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
pythonpath = ["."]
